--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -1,5 +1,5 @@
 @Article{Bengtsson:2021,
-  author    = {Henrik Bengtsson},
+  author    = {Bengtsson, H.},
   title     = {A Unifying Framework for Parallel and Distributed Processing in {R} using Futures},
   year      = {2021},
   journal   = {The R Journal},
@@ -11,7 +11,7 @@
 
 @Manual{Bengtsson:2024,
   title     = {progressr: An Inclusive, Unifying API for Progress Updates},
-  author    = {Henrik Bengtsson},
+  author    = {Bengtsson, H.},
   year      = {2024},
   note      = {R package},
   url       = {https://CRAN.R-project.org/package=progressr}
