--- a/vignettes/example_hmm.Rmd
+++ b/vignettes/example_hmm.Rmd
@@ -27,8 +27,11 @@ knitr::opts_chunk$set(
   warning   = FALSE
 )
 library("ino")
-data("Nop_hmm")
-set.seed(1)
+if ((eval_Nop_hmm <- isTRUE(requireNamespace("fHMM", quietly = TRUE)))) {
+  library("fHMM")
+  data("Nop_hmm")
+  set.seed(1)
+} 
 ```
 
 HMMs are statistical models used to explain systems that can only be observed indirectly through a sequence of outputs, and have unobservable hidden states. They consist of two processes, 
@@ -45,7 +48,7 @@ Numerical likelihood optimization is a prominent method for fitting HMMs to empi
 
 The example data set considered throughout this vignette covers a time series of log returns from the [German stock index DAX](https://en.wikipedia.org/wiki/DAX) over 30 years. The DAX closing prices are freely accessible via [Yahoo Finance](https://finance.yahoo.com) and can be downloaded via the `download_data()` function from the `{fHMM}` package [@Oelschlaeger:2024]. We transform them to log-returns using the `{dplyr}` package [@Wickham:2023]:
 
-```{r download dax data, eval = TRUE}
+```{r download dax data, eval = eval_Nop_hmm}
 library("fHMM")
 library("dplyr")
 dax <- download_data(symbol = "^GDAXI", from = "1990-01-01", to = "2020-01-01") %>%
@@ -58,15 +61,33 @@ dax <- download_data(symbol = "^GDAXI", from = "1990-01-01", to = "2020-01-01") 
   print()
 ```
 
+```{r, purl = FALSE, echo = FALSE, eval = !eval_Nop_hmm}
+cat("Output not shown because the 'fHMM' namespace is unavailable.")
+```
+
+```{r dax details, eval = TRUE, purl = FALSE, include = FALSE}
+if (eval_Nop_hmm) {
+  nrow_dax <- nrow(dax)
+  range_dax <- paste(c("from", "to"), round(range(dax$logreturn), 1), collapse = " ")
+} else {
+  nrow_dax <- 7475
+  range_dax <- "from -0.1 to 0.1"
+}
+```
+
 The time series looks as follows:
 
-```{r plot-dax-data, eval = TRUE}
+```{r plot-dax-data, eval = eval_Nop_hmm}
 library("ggplot2")
 ggplot(dax, aes(x = date, y = logreturn)) +
   geom_point() +
   geom_line() +
   scale_x_date() +
   scale_y_continuous(labels = scales::label_percent())
+```
+
+```{r, purl = FALSE, echo = FALSE, eval = !eval_Nop_hmm}
+cat("Output not shown because the 'fHMM' namespace is unavailable.")
 ```
 
 As the log-returns are continuous and can take both negative and positive values, we consider an HMM with Gaussian state-dependent distributions --- note that some applications instead use t-distributions to also model the kurtosis [@Oelschlaeger:2021].
@@ -167,7 +188,7 @@ Nop_hmm$
 
 ### Subset initialization
 
-Since the data set is large, containing a total of `r nrow(dax)` log-return observations, it might be beneficial to obtain initial values by first fitting the model to a data subset. If the data subset is chosen small enough, estimation with the subset will be much faster. On the other hand, if the data subset is chosen large enough to still contain enough information, the estimates on the subset will already lie close to the estimates for the full model and provide good initial values for the full optimization.
+Since the data set is large, containing a total of `r nrow_dax` log-return observations, it might be beneficial to obtain initial values by first fitting the model to a data subset. If the data subset is chosen small enough, estimation with the subset will be much faster. On the other hand, if the data subset is chosen large enough to still contain enough information, the estimates on the subset will already lie close to the estimates for the full model and provide good initial values for the full optimization.
 
 To illustrate the subset initialization strategy, we consider the first quarter of observations, which can be extracted using the `$reduce_argument()` method with arguments `how = "first"` and `proportion = 0.25`. The starting values for the optimizations on this subset are drawn from the `sampler()` function defined above. We again use `$optimize()` to fit the HMM, but now to the data subset. With `$initialize_continue()`, we then use the estimates obtained from the optimization on the subset as initial values to fit the model to the entire data set. 
 
@@ -185,7 +206,7 @@ Nop_hmm$
 
 ## Standardize initialization
 
-The considered log-returns range `r paste(c("from", "to"), round(range(dax$logreturn), 1), collapse = " ")`. Optimization might be facilitated by standardizing the data first. This idea can be tested via the `$standardize_argument()` method:
+The considered log-returns range `r range_dax`. Optimization might be facilitated by standardizing the data first. This idea can be tested via the `$standardize_argument()` method:
 
 ```{r standardize initialization 1}
 Nop_hmm$standardize_argument("observations")
@@ -225,34 +246,52 @@ Selecting the starting values for the HMM likelihood optimization is a well-know
 - `sort_by = "value"` sorts the table by function value,
 - `digitis = 0` ignores any decimal places.
 
-```{r overview of optima, eval = TRUE}
+```{r overview of optima, eval = eval_Nop_hmm}
 Nop_hmm$optima(sort_by_value = TRUE, digits = 0)
 ```
 
-```{r get number of converged runs, include = FALSE, eval = TRUE}
+```{r, purl = FALSE, echo = FALSE, eval = !eval_Nop_hmm}
+cat("Output not shown because the 'fHMM' namespace is unavailable.")
+```
+
+```{r get number of converged runs, include = FALSE, eval = eval_Nop_hmm}
 optima <- Nop_hmm$optima(sort_by_value = TRUE, digits = 0)
 global <- optima |> arrange(value) |> slice(1) |> pull(n)
 total <- sum(optima$n)
 local <- total - global
 ```
 
+```{r optima details, eval = !eval_Nop_hmm, purl = FALSE, include = FALSE}
+global <- 168
+total <- 364
+local <- 196
+```
+
 The frequency table indicates that `r global` out of `r total` runs converged to the smallest (negative) log-likelihood value, which appears to be the global optimum (note that these are the negative log-likelihood values). However, in `r local` runs we apparently got stuck in local optima.
 
 Using `$results`, we now can investigate the optimum values (`"value"`), the corresponding parameter vectors (`"parameter"`), and the optimization times (`"seconds"`) of all runs (here, only the first are shown):
 
-```{r summary of results, eval = TRUE}
+```{r summary of results, eval = eval_Nop_hmm}
 Nop_hmm$results |> select(value, parameter, seconds)
+```
+
+```{r, purl = FALSE, echo = FALSE, eval = !eval_Nop_hmm}
+cat("Output not shown because the 'fHMM' namespace is unavailable.")
 ```
 
 The final parameter estimates can be accessed:
 
-```{r best parameter, eval = TRUE}
+```{r best parameter, eval = eval_Nop_hmm}
 Nop_hmm$minimum
+```
+
+```{r, purl = FALSE, echo = FALSE, eval = !eval_Nop_hmm}
+cat("Output not shown because the 'fHMM' namespace is unavailable.")
 ```
 
 Next, we can compute the proportion of runs that lead to the apparent global optimum as follows (note that the standardized initialization approach cannot be compared to the other approaches here and is filtered via the `.original` identifier):
 
-```{r proportion of converged runs, eval = TRUE}
+```{r proportion of converged runs, eval = eval_Nop_hmm}
 Nop_hmm$results |> 
   filter(.original) |>
   mutate(global_optimum = value < -22445) |>
@@ -260,17 +299,25 @@ Nop_hmm$results |>
   summarise(proportion = mean(global_optimum, na.rm = TRUE))
 ```
 
+```{r, purl = FALSE, echo = FALSE, eval = !eval_Nop_hmm}
+cat("Output not shown because the 'fHMM' namespace is unavailable.")
+```
+
 ### Optimization time
 
 The `autoplot()` method can be used to investigate the optimization times across initialization strategies by setting `group_by = "optimization"`:
 
-```{r optimization-time, eval = TRUE}
+```{r optimization-time, eval = eval_Nop_hmm}
 Nop_hmm$results |> autoplot(group_by = "optimization")
+```
+
+```{r, purl = FALSE, echo = FALSE, eval = !eval_Nop_hmm}
+cat("Output not shown because the 'fHMM' namespace is unavailable.")
 ```
 
 We can also compute summary statistics of interest, like the median computation time or standard deviation per strategy:
 
-```{r summary statistics, eval = TRUE}
+```{r summary statistics, eval = eval_Nop_hmm}
 Nop_hmm$results |>
   group_by(.optimization_label) %>%
   summarise(
@@ -278,6 +325,10 @@ Nop_hmm$results |>
     sd_seconds = sd(seconds, na.rm = TRUE)
   ) %>%
   arrange(median_seconds)
+```
+
+```{r, purl = FALSE, echo = FALSE, eval = !eval_Nop_hmm}
+cat("Output not shown because the 'fHMM' namespace is unavailable.")
 ```
 
 The subset and the standardize approach can improve the median optimization time by a factor of about 2 in this example compared to the random initialization approach. Standardization also reduces standard deviation in computation time, indicating more stable optimization.
